[package]
name = "smsys"
version = "0.1.0"
edition = "2021"
authors = ["smwasm@outlook.com"]
repository = "https://github.com/smwasm/smsys.git"
license = "Apache-2.0"
description = "SmartModule System Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
lazy_static = "1.4.0"

smcore = "0.1.3"
smdton = "0.1.2"
